default/objects/success__Milestone__c/success__Milestone__c.object-meta.xml
<CustomObject>
    <description>Within Competitions and Experience Groups, Behaviours can include individual Milestones that can be configured as interim goals towards the overall Behaviour target, or alternatively as stretch goals beyond the target.</description>
    <label>Milestone</label>
    <nameField>
        <displayFormat>MIL-{0000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>