default/objects/success__Milestone__c/fields/success__Badge_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Badge_Name__c</fullName>
    <label>Badge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>