default/objects/success__Milestone__c/fields/success__Behaviour__c.field-meta.xml
<CustomField>
    <fullName>success__Behaviour__c</fullName>
    <label>Behaviour</label>
    <referenceTo>success__Team_Achievement__c</referenceTo>
    <relationshipLabel>Milestone</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>