default/objects/success__Milestone__c/fields/success__Description__c.field-meta.xml
<CustomField>
    <fullName>success__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>