default/objects/success__Milestone__c/fields/success__Points__c.field-meta.xml
<CustomField>
    <fullName>success__Points__c</fullName>
    <label>Points</label>
    <type>TextArea</type>
</CustomField>