default/objects/success__Milestone__c/fields/success__Reward_Message__c.field-meta.xml
<CustomField>
    <fullName>success__Reward_Message__c</fullName>
    <label>Reward Message</label>
    <type>TextArea</type>
</CustomField>